# reddit_orchestrator

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  __main__.py  app.py  docker-compose.yml  extractor.py  kafka_consumer.py  kafka_producer.py  models.py  neo4j_writer.py  pgvector_writer.py  pyproject.toml  run_tests.py  test_app.py  test_extractor.py  test_kafka_consumer.py  test_kafka_producer.py  test_models.py  test_neo4j_writer.py  test_pgvector_writer.py  test_reddit_data.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-cd.yml
docs/: README.md  architecture.mmd  class.mmd  sequence.mmd
