[project]
name = "py-implementation"
version = "1.0.0"
description = "Reddit data handler that extracts posts and comments, converts to JSON-LD, and sends to Kafka"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Thommy Berglund"}
]

dependencies = [
    "flask>=3.0.0",
    "confluent-kafka>=2.3.0",
    "boto3>=1.26.0",
    "psycopg2-binary>=2.9.9",
    "neo4j>=5.12.0",
    "sentence-transformers>=2.2.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "gunicorn>=21.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
extra-index-url = []

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["."]
